--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>MicroTutorials</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+<title>MicroTutorials</title>
+	<% flash.each do |key, value| %>
+		<%= content_tag :div, value, class: "flash #{key}" %>
+	<% end %>
   <%= csrf_meta_tags %>
 </head>
 <body>
