--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title>MicroTutorials</title>
+	<%= stylesheet_link_tag 'application', media: 'all'%>
+	<%= javascript_include_tag 'application' %>
 	<% flash.each do |key, value| %>
 		<%= content_tag :div, value, class: "flash #{key}" %>
 	<% end %>
